--- a/Web Development Final/online_job/templates/applied_candidatelist.html
+++ b/Web Development Final/online_job/templates/applied_candidatelist.html
@@ -1,62 +1,62 @@
-<!--{% load static %}-->
+{% load static %}
 
-<!--{% block body %}-->
+{% block body %}
 
-<!--{% include 'recruiter_navigation.html' %}-->
-<!--<style>-->
-<!--    tr{text-align: center}-->
+{% include 'recruiter_navigation.html' %}
+<style>
+    tr{text-align: center}
 
-<!--</style>-->
-
-
-<!--<marquee style="font-family:'Monotype-Corsiva'; font-size:25px; color:white; background-color:purple; font-weight:bold; margin-top:1%">-->
-<!--Applied Candidates-->
-<!--</marquee>-->
-<!--<hr>-->
-
-<!--<div class="container">-->
-
-<!--<table class = "table table-hover" id="example" >-->
-<!--    <thead>-->
-<!--    <tr style="background-color: blue; color: white">-->
-<!--        <th>S.No.</th>-->
-<!--        <th>FullName </th>-->
-<!--        <th>Email-ID</th>-->
-<!--        <th>Contact No.</th>-->
-<!--        <th>Job Title</th>-->
-<!--        <th>Company</th>-->
-<!--        <th>ApplyDate</th>-->
-
-<!--        <th>Resume</th>-->
-
-<!--    </tr>-->
-<!--    </thead>-->
-
-<!--    <tbody style=" background-color: #DEB887">-->
-
-<!--    {% for i in data %}-->
-<!--    {% ifequal request.user.id i.job.recruiter.user.id%}-->
+</style>
 
 
-<!--    <tr style="background-color: #DEB887">-->
-<!--        <td>{{forloop.counter}}</td>-->
-<!--        <td>{{i.student.user.first_name}} {{i.student.user.last_name}} </td>-->
-<!--        <td>{{i.student.user.username}}</td>-->
-<!--         <td>{{i.student.mobile}} </td>-->
-<!--         <td>{{i.job.title}} </td>-->
-<!--         <td>{{i.job.recruiter.company}} </td>-->
-<!--         <td>{{i.applydate}} </td>-->
-<!--        <td><a href="{{i.resume.url}}">Download Resume</a></td>-->
+<marquee style="font-family:'Monotype-Corsiva'; font-size:25px; color:white; background-color:purple; font-weight:bold; margin-top:1%">
+Applied Candidates
+</marquee>
+<hr>
 
-<!--    </tr>-->
+<div class="container">
+
+<table class = "table table-hover" id="example" >
+    <thead>
+    <tr style="background-color: blue; color: white">
+        <th>S.No.</th>
+        <th>FullName </th>
+        <th>Email-ID</th>
+        <th>Contact No.</th>
+        <th>Job Title</th>
+        <th>Company</th>
+        <th>ApplyDate</th>
+
+        <th>Resume</th>
+
+    </tr>
+    </thead>
+
+    <tbody style=" background-color: #DEB887">
+
+    {% for i in data %}
+    {% ifequal request.user.id i.job.recruiter.user.id%}
 
 
-<!--    {% endifequal %}-->
-<!--     {% endfor  %}-->
+    <tr style="background-color: #DEB887">
+        <td>{{forloop.counter}}</td>
+        <td>{{i.student.user.first_name}} {{i.student.user.last_name}} </td>
+        <td>{{i.student.user.username}}</td>
+         <td>{{i.student.mobile}} </td>
+         <td>{{i.job.title}} </td>
+         <td>{{i.job.recruiter.company}} </td>
+         <td>{{i.applydate}} </td>
+        <td><a href="{{i.resume.url}}">Download Resume</a></td>
 
-<!--    </tbody>-->
-<!--</table>-->
-<!--</div>-->
+    </tr>
 
 
-<!--{% endblock %}-->
+    {% endifequal %}
+     {% endfor  %}
+
+    </tbody>
+</table>
+</div>
+
+
+{% endblock %}
