--- a/Web Development Final/online_job/templates/recruiter_login.html
+++ b/Web Development Final/online_job/templates/recruiter_login.html
@@ -1,45 +1,45 @@
-<!--{% load static %}-->
-<!--{% block body %}-->
+{% load static %}
+{% block body %}
 
 
-<!--{% include 'navigation.html' %}-->
+{% include 'navigation.html' %}
 
-<!--<marquee style="font-family:'Monotype-Corsiva'; font-size:25px; color:white; background-color:purple; font-weight:bold; margin-top:1%">-->
-<!--    Recruiter Login-->
-<!--</marquee>-->
-<!--<hr>-->
-<!--<form class="container mt-5 shadow p-5" method="post">-->
-<!--    {% csrf_token %}-->
-<!--    <label><b>Email ID</b></label>-->
-<!--    <input type="text" class="form-control" name="uname" placeholder="Enter Email ID">-->
+<marquee style="font-family:'Monotype-Corsiva'; font-size:25px; color:white; background-color:purple; font-weight:bold; margin-top:1%">
+    Recruiter Login
+</marquee>
+<hr>
+<form class="container mt-5 shadow p-5" method="post">
+    {% csrf_token %}
+    <label><b>Email ID</b></label>
+    <input type="text" class="form-control" name="uname" placeholder="Enter Email ID">
 
-<!--    <label><b>Password</b></label>-->
-<!--    <input type="password" class="form-control" name="pwd" placeholder="Enter Password">-->
+    <label><b>Password</b></label>
+    <input type="password" class="form-control" name="pwd" placeholder="Enter Password">
 
-<!--    <input type="submit" class="btn btn-primary" style="margin-top:2% ; color:white; background-color:black; ">-->
-<!--<a href="{% url 'recruiter_signup' %}" class="btn btn-primary" style="margin-top:2% ; color:white; background-color:black;"> Sign Up</a>-->
-<!--        <a href="{% url 'forgetpassword' %}" class="btn btn-primary" style="margin-top:2% ; color:white; background-color:black;"> Forget Password </a>-->
-<!--</form>-->
+    <input type="submit" class="btn btn-primary" style="margin-top:2% ; color:white; background-color:black; ">
+<a href="{% url 'recruiter_signup' %}" class="btn btn-primary" style="margin-top:2% ; color:white; background-color:black;"> Sign Up</a>
+        <a href="{% url 'forgetpassword' %}" class="btn btn-primary" style="margin-top:2% ; color:white; background-color:black;"> Forget Password </a>
+</form>
 
 
-<!--{% ifequal error "no" %}-->
-<!--<script>-->
-<!--    alert("Login Successful");-->
-<!--    window.location=('{% url 'recruiter_home' %}')-->
-<!--</script>-->
-<!--{% endifequal %}-->
+{% ifequal error "no" %}
+<script>
+    alert("Login Successful");
+    window.location=('{% url 'recruiter_home' %}')
+</script>
+{% endifequal %}
 
-<!--{% ifequal error "yes" %}-->
-<!--<script>-->
-<!--    alert("Invalid Login Credentials, Try Again...");-->
-<!--</script>-->
-<!--{% endifequal %}-->
+{% ifequal error "yes" %}
+<script>
+    alert("Invalid Login Credentials, Try Again...");
+</script>
+{% endifequal %}
 
-<!--{% ifequal error "not" %}-->
-<!--<script>-->
-<!--    alert("Your Login Status is Pending");-->
-<!--</script>-->
-<!--{% endifequal %}-->
+{% ifequal error "not" %}
+<script>
+    alert("Your Login Status is Pending");
+</script>
+{% endifequal %}
 
-<!--{% include 'footer.html' %}-->
-<!--{% endblock%}-->
+{% include 'footer.html' %}
+{% endblock%}
