--- a/Web Development Final/online_job/templates/add_job.html
+++ b/Web Development Final/online_job/templates/add_job.html
@@ -1,95 +1,95 @@
-<!--{% load static %}-->
+{% load static %}
 
-<!--{% block body %}-->
+{% block body %}
 
-<!--{% include 'recruiter_navigation.html' %}-->
-
-
-<!--<marquee style="font-family:'Monotype-Corsiva'; font-size:25px; color:white; background-color:purple; font-weight:bold; margin-top:1%">-->
-<!--Add Job-->
-<!--</marquee>-->
-<!--<hr>-->
-
-<!--<form class="container mt-5"  onsubmit="return checkpass();" name="signup" method="post" enctype="multipart/form-data">-->
-<!--    {% csrf_token %}-->
-
-<!--    <div class="form-row">-->
-<!--        <div class="form-group col-md-12">-->
-<!--            <label>Job Title</label>-->
-<!--            <input type="text" class="form-control" name="jobtitle" placeholder="Enter Job Title" required>-->
-<!--        </div>-->
-
-<!--    </div>-->
-<!--    <div class="form-row">-->
-<!--         <div class="form-group col-md-6">-->
-<!--            <label>Start Date</label>-->
-<!--            <input type="date" class="form-control" name="startdate"  required>-->
-<!--         </div>-->
+{% include 'recruiter_navigation.html' %}
 
 
-<!--          <div class="form-group col-md-6">-->
-<!--              <label>End Date</label>-->
-<!--              <input type="date" class="form-control" name="enddate" required>-->
-<!--          </div>-->
-<!--      </div>-->
+<marquee style="font-family:'Monotype-Corsiva'; font-size:25px; color:white; background-color:purple; font-weight:bold; margin-top:1%">
+Add Job
+</marquee>
+<hr>
 
-<!--     <div class="form-row">-->
-<!--    <div class="form-group col-md-6">-->
-<!--            <label>Salary(Per month)</label>-->
-<!--            <input type="text" class="form-control" name="salary"  required>-->
-<!--         </div>-->
+<form class="container mt-5"  onsubmit="return checkpass();" name="signup" method="post" enctype="multipart/form-data">
+    {% csrf_token %}
 
-<!--          <div class="form-group col-md-6">-->
-<!--              <label>Company Logo</label>-->
-<!--              <input type="file" class="form-control" name="logo" required>-->
-<!--          </div>-->
-<!--      </div>-->
+    <div class="form-row">
+        <div class="form-group col-md-12">
+            <label>Job Title</label>
+            <input type="text" class="form-control" name="jobtitle" placeholder="Enter Job Title" required>
+        </div>
 
-<!--    <div class="form-row">-->
-<!--    <div class="form-group col-md-6">-->
-<!--        <label>Experience(In years)</label>-->
-<!--        <input type="text" class="form-control" name="experience" placeholder="Enter Your Experience(In years)" required>-->
-<!--     </div>-->
-
-<!--     <div class="form-group col-md-6">-->
-<!--        <label>Company Location</label>-->
-<!--        <input type="text" class="form-control" name="location"  required>-->
-<!--     </div>-->
-
-<!--    </div>-->
-
-<!--    <div class="form-row">-->
-<!--    <div class="form-group col-md-12">-->
-<!--        <label>Skills</label>-->
-<!--        <input type="text" class="form-control" name="skills" placeholder="Skills Required" required>-->
-<!--     </div>-->
-<!--    </div>-->
-
-<!--    <div class="form-row">-->
-<!--    <div class="form-group col-md-12">-->
-<!--        <label>Description</label>-->
-<!--        <textarea type="text" class="form-control" name="description" placeholder="Enter Description" required></textarea>-->
-<!--     </div>-->
-<!--    </div>-->
-
-<!--<input type="submit" value="Submit" class="btn btn-primary" style="width: 200px" >-->
+    </div>
+    <div class="form-row">
+         <div class="form-group col-md-6">
+            <label>Start Date</label>
+            <input type="date" class="form-control" name="startdate"  required>
+         </div>
 
 
-<!--</form>-->
-<!--{% include 'footer.html' %}-->
+          <div class="form-group col-md-6">
+              <label>End Date</label>
+              <input type="date" class="form-control" name="enddate" required>
+          </div>
+      </div>
 
-<!--{% ifequal error "no" %}-->
-<!--<script>-->
-<!--    alert("Job Details has been added ");-->
-<!--    window.location = ('{% url 'job_list' %}')-->
-<!--</script>-->
+     <div class="form-row">
+    <div class="form-group col-md-6">
+            <label>Salary(Per month)</label>
+            <input type="text" class="form-control" name="salary"  required>
+         </div>
 
-<!--{% endifequal%}-->
-<!--{% ifequal error "yes" %}-->
+          <div class="form-group col-md-6">
+              <label>Company Logo</label>
+              <input type="file" class="form-control" name="logo" required>
+          </div>
+      </div>
 
-<!--<script>-->
-<!-- alert("Something Went Wrong,Try Again....");-->
-<!--</script>-->
-<!--{% endifequal%}-->
+    <div class="form-row">
+    <div class="form-group col-md-6">
+        <label>Experience(In years)</label>
+        <input type="text" class="form-control" name="experience" placeholder="Enter Your Experience(In years)" required>
+     </div>
 
-<!--{% endblock %}-->
+     <div class="form-group col-md-6">
+        <label>Company Location</label>
+        <input type="text" class="form-control" name="location"  required>
+     </div>
+
+    </div>
+
+    <div class="form-row">
+    <div class="form-group col-md-12">
+        <label>Skills</label>
+        <input type="text" class="form-control" name="skills" placeholder="Skills Required" required>
+     </div>
+    </div>
+
+    <div class="form-row">
+    <div class="form-group col-md-12">
+        <label>Description</label>
+        <textarea type="text" class="form-control" name="description" placeholder="Enter Description" required></textarea>
+     </div>
+    </div>
+
+<input type="submit" value="Submit" class="btn btn-primary" style="width: 200px" >
+
+
+</form>
+{% include 'footer.html' %}
+
+{% ifequal error "no" %}
+<script>
+    alert("Job Details has been added ");
+    window.location = ('{% url 'job_list' %}')
+</script>
+
+{% endifequal%}
+{% ifequal error "yes" %}
+
+<script>
+ alert("Something Went Wrong,Try Again....");
+</script>
+{% endifequal%}
+
+{% endblock %}
