--- a/Web Development Final/online_job/templates/admin_home.html
+++ b/Web Development Final/online_job/templates/admin_home.html
@@ -1,43 +1,43 @@
-<!--={% load static %}-->
+{% load static %}
 
-<!--{% block body %}-->
+{% block body %}
 
-<!--{% include 'admin_navigation.html' %}-->
+{% include 'admin_navigation.html' %}
 
-<!--&lt;!&ndash;#Admin Home Page&ndash;&gt;-->
+<!--#Admin Home Page-->
 
-<!--<style>-->
-<!--    .mydiv:hover{-->
-<!--    box-shadow: 0 0 20px 0 rgba(0,0,0,0.3);-->
-<!--    transform: translateY(-20px)-->
+<style>
+    .mydiv:hover{
+    box-shadow: 0 0 20px 0 rgba(0,0,0,0.3);
+    transform: translateY(-20px)
 
-<!--    }-->
-<!--</style>-->
+    }
+</style>
 
-<!--<marquee style="font-family:'Monotype-Corsiva'; font-size:25px; color:white; background-color:purple; font-weight:bold; margin-top:1%">-->
-<!--Total Recruiters and Total Users-->
-<!--</marquee>-->
-<!--<hr>-->
-<!--<div class="container mt-5">-->
+<marquee style="font-family:'Monotype-Corsiva'; font-size:25px; color:white; background-color:purple; font-weight:bold; margin-top:1%">
+Total Recruiters and Total Users
+</marquee>
+<hr>
+<div class="container mt-5">
 
-<!--    <br><br>-->
-<!--    <div class="row mt-5">-->
-<!--        <div class="col-sm-6 mydiv">-->
-<!--            <h2 class="text-center"><i class="fa fa-user"></i> Total Recruiters </h2>-->
-<!--            <h4 class="text-center font-weight-bold">{{rcount}}</h4>-->
+    <br><br>
+    <div class="row mt-5">
+        <div class="col-sm-6 mydiv">
+            <h2 class="text-center"><i class="fa fa-user"></i> Total Recruiters </h2>
+            <h4 class="text-center font-weight-bold">{{rcount}}</h4>
 
-<!--        </div>-->
+        </div>
 
-<!--         <div class="col-sm-6 mydiv">-->
-<!--            <h2 class="text-center "><i class="fa fa-user"></i> Total Users  </h2>-->
-<!--            <h4 class="text-center font-weight-bold">{{scount}}</h4>-->
+         <div class="col-sm-6 mydiv">
+            <h2 class="text-center "><i class="fa fa-user"></i> Total Users  </h2>
+            <h4 class="text-center font-weight-bold">{{scount}}</h4>
 
-<!--        </div>-->
-
-
-<!--    </div>-->
-
-<!--</div>-->
+        </div>
 
 
-<!--{% endblock %}-->
+    </div>
+
+</div>
+
+
+{% endblock %}
