--- a/Web Development Final/online_job/templates/change_companylogo.html
+++ b/Web Development Final/online_job/templates/change_companylogo.html
@@ -1,59 +1,59 @@
-<!--{% load static %}-->
+{% load static %}
 
-<!--{% block body %}-->
+{% block body %}
 
-<!--{% include 'recruiter_navigation.html' %}-->
-
-
-<!--<marquee style="font-family:'Monotype-Corsiva'; font-size:20px; color:white; background-color:purple; font-weight:bold; margin-top:1%">-->
-<!--Change The Company Logo-->
-<!--</marquee>-->
-<!--<hr>-->
-
-<!--<form class="container mt-5" method="post" enctype="multipart/form-data">-->
-<!--    {% csrf_token %}-->
-
-<!--    <div class="form-row">-->
-<!--        <div class="form-group col-md-12">-->
-<!--            <label>Job Title</label>-->
-<!--            <input type="text" class="form-control" readonly name="jobtitle" value="{{job.title}}" required>-->
-<!--        </div>-->
-
-<!--    </div>-->
-
-<!--     <div class="form-row">-->
-<!--          <div class="form-group col-md-12">-->
-<!--              <img src="{{job.image.url}}" width="120" height="90">-->
-
-<!--          </div>-->
-<!--      </div>-->
-
-<!--    <div class="form-row">-->
-<!--        <div class="form-group col-md-12">-->
-<!--        <label>Company Logo</label>-->
-<!--        <input type="file" class="form-control" name="logo"  required>-->
-<!--     </div>-->
-<!--    </div>-->
+{% include 'recruiter_navigation.html' %}
 
 
-<!--<input type="submit" value="Submit" class="btn btn-primary" style="width: 200px" >-->
+<marquee style="font-family:'Monotype-Corsiva'; font-size:20px; color:white; background-color:purple; font-weight:bold; margin-top:1%">
+Change The Company Logo
+</marquee>
+<hr>
+
+<form class="container mt-5" method="post" enctype="multipart/form-data">
+    {% csrf_token %}
+
+    <div class="form-row">
+        <div class="form-group col-md-12">
+            <label>Job Title</label>
+            <input type="text" class="form-control" readonly name="jobtitle" value="{{job.title}}" required>
+        </div>
+
+    </div>
+
+     <div class="form-row">
+          <div class="form-group col-md-12">
+              <img src="{{job.image.url}}" width="120" height="90">
+
+          </div>
+      </div>
+
+    <div class="form-row">
+        <div class="form-group col-md-12">
+        <label>Company Logo</label>
+        <input type="file" class="form-control" name="logo"  required>
+     </div>
+    </div>
 
 
-<!--</form>-->
-<!--{% include 'footer.html' %}-->
+<input type="submit" value="Submit" class="btn btn-primary" style="width: 200px" >
 
-<!--{% ifequal error "no" %}-->
-<!--<script>-->
-<!--    alert("Company Logo  has been updated ");-->
-<!--    window.location = ('{% url 'change_companylogo' job.id %}')-->
-<!--</script>-->
 
-<!--{% endifequal%}-->
-<!--{% ifequal error "yes" %}-->
+</form>
+{% include 'footer.html' %}
 
-<!--<script>-->
-<!-- alert("Something Went Wrong,Try Again....");-->
-<!--</script>-->
-<!--{% endifequal%}-->
+{% ifequal error "no" %}
+<script>
+    alert("Company Logo  has been updated ");
+    window.location = ('{% url 'change_companylogo' job.id %}')
+</script>
 
-<!--{% endblock %}-->
+{% endifequal%}
+{% ifequal error "yes" %}
+
+<script>
+ alert("Something Went Wrong,Try Again....");
+</script>
+{% endifequal%}
+
+{% endblock %}
