--- a/Web Development Final/online_job/templates/change_status.html
+++ b/Web Development Final/online_job/templates/change_status.html
@@ -1,39 +1,39 @@
-<!--{% load static %}-->
-<!--{% block body %}-->
+{% load static %}
+{% block body %}
 
 
-<!--{% include 'admin_navigation.html' %}-->
+{% include 'admin_navigation.html' %}
 
-<!--<marquee style="font-family:'Monotype-Corsiva'; font-size:25px; color:white; background-color:purple; font-weight:bold; margin-top:1%">-->
-<!--    Change Status-->
-<!--</marquee>-->
-<!--<hr>-->
+<marquee style="font-family:'Monotype-Corsiva'; font-size:25px; color:white; background-color:purple; font-weight:bold; margin-top:1%">
+    Change Status
+</marquee>
+<hr>
 
-<!--<form class="container mt-5" method="post">-->
-<!--    {% csrf_token %}-->
-<!--    <label><b>Recruiter Name</b></label>-->
-<!--    <input type="text" class="form-control" name="uname" value="{{recruiter.user.first_name}} {{recruiter.user.last_name}}">-->
+<form class="container mt-5" method="post">
+    {% csrf_token %}
+    <label><b>Recruiter Name</b></label>
+    <input type="text" class="form-control" name="uname" value="{{recruiter.user.first_name}} {{recruiter.user.last_name}}">
 
-<!--    <label><b>Status</b></label>-->
-<!--    <select class="form-control" name="status">-->
-<!--        <option value="Accept">Accept</option>-->
-<!--        <option value="Reject">Reject</option>-->
-<!--    </select>-->
+    <label><b>Status</b></label>
+    <select class="form-control" name="status">
+        <option value="Accept">Accept</option>
+        <option value="Reject">Reject</option>
+    </select>
 
-<!--    <input type="submit" class="btn btn-primary" style="margin-top:2% ; color:white; background-color:black; ">-->
-<!--</form>-->
+    <input type="submit" class="btn btn-primary" style="margin-top:2% ; color:white; background-color:black; ">
+</form>
 
-<!--{% ifequal error "no" %}-->
-<!--<script>-->
-<!--    alert("Status Changed Successfully");-->
-<!--    window.location=('{% url 'recruiter_all' %}')-->
-<!--</script>-->
-<!--{% endifequal %}-->
+{% ifequal error "no" %}
+<script>
+    alert("Status Changed Successfully");
+    window.location=('{% url 'recruiter_all' %}')
+</script>
+{% endifequal %}
 
-<!--{% ifequal error "yes" %}-->
-<!--<script>-->
-<!--    alert("Something went wrong, Try Again...");-->
-<!--</script>-->
-<!--{% endifequal %}-->
+{% ifequal error "yes" %}
+<script>
+    alert("Something went wrong, Try Again...");
+</script>
+{% endifequal %}
 
-<!--{% endblock%}-->
+{% endblock%}
