--- a/Web Development Final/online_job/templates/contact.html
+++ b/Web Development Final/online_job/templates/contact.html
@@ -1,60 +1,60 @@
-<!--{% load static %}-->
+{% load static %}
 
-<!--{% block body %}-->
+{% block body %}
 
-<!--{% include 'navigation.html' %}-->
+{% include 'navigation.html' %}
 
-<!--<link rel="stylesheet " href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.6.3/css/all.css">-->
-<!--<style>-->
-<!--    .mydiv:hover{-->
-<!--    box-shadow: 0 0 20px 0 rgba(0,0,0,0.3);-->
-<!--    transform: translateY(-30px)-->
-<!--    Background-color: blue-->
+<link rel="stylesheet " href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.6.3/css/all.css">
+<style>
+    .mydiv:hover{
+    box-shadow: 0 0 20px 0 rgba(0,0,0,0.3);
+    transform: translateY(-30px)
+    Background-color: blue
 
-<!--    }-->
-<!--    background color: blue;-->
-<!--</style>-->
-
-
-<!--<marquee style="font-family:'Monotype-Corsiva'; font-size:25px; color:white; background-color:purple; font-weight:bold; margin-top:1%">-->
-<!--Contact Us-->
-<!--</marquee>-->
-<!--<hr>-->
-<!--<div class="container mt-5">-->
-
-<!--    <br><br>-->
-<!--    <div class="row mt-5">-->
-<!--        <div class="col-sm-3 mydiv">-->
-<!--            <h4 class="text-center"><i class="fa fa-phone-square"></i> Contact Number</h4>-->
-<!--            <p class="text-center">+977 9840714362/ +977 9803710800</p>-->
-
-<!--        </div>-->
-
-<!--         <div class="col-sm-3 mydiv">-->
-<!--            <h4 class="text-center"><i class="fa fa-envelope"></i> Email Id </h4>-->
-<!--            <p class="text-center">supukarki5@gmail.com</p>-->
-
-<!--        </div>-->
-
-<!--        <div class="col-sm-3 mydiv">-->
-<!--            <h4 class="text-center"><i class="fa fa-address-card"></i> Address  </h4>-->
-<!--            <p class="text-center">Dhapakhel , Lalitpur</p>-->
-
-<!--        </div>-->
+    }
+    background color: blue;
+</style>
 
 
-<!--        <div class="col-sm-3 mydiv">-->
-<!--            <h4 class="text-center"><i class="far fa-clock"></i> Office Timing </h4>-->
-<!--            <p class="text-center">www.onlinejobportal.com </p>-->
-<!--            <p class="text-center">9:00 A.M to 5:00 P.M</p>-->
+<marquee style="font-family:'Monotype-Corsiva'; font-size:25px; color:white; background-color:purple; font-weight:bold; margin-top:1%">
+Contact Us
+</marquee>
+<hr>
+<div class="container mt-5">
 
-<!--        </div>-->
+    <br><br>
+    <div class="row mt-5">
+        <div class="col-sm-3 mydiv">
+            <h4 class="text-center"><i class="fa fa-phone-square"></i> Contact Number</h4>
+            <p class="text-center">+977 9840714362/ +977 9803710800</p>
+
+        </div>
+
+         <div class="col-sm-3 mydiv">
+            <h4 class="text-center"><i class="fa fa-envelope"></i> Email Id </h4>
+            <p class="text-center">supukarki5@gmail.com</p>
+
+        </div>
+
+        <div class="col-sm-3 mydiv">
+            <h4 class="text-center"><i class="fa fa-address-card"></i> Address  </h4>
+            <p class="text-center">Dhapakhel , Lalitpur</p>
+
+        </div>
 
 
-<!--    </div>-->
+        <div class="col-sm-3 mydiv">
+            <h4 class="text-center"><i class="far fa-clock"></i> Office Timing </h4>
+            <p class="text-center">www.onlinejobportal.com </p>
+            <p class="text-center">9:00 A.M to 5:00 P.M</p>
 
-<!--</div>-->
-<!--{% include 'footer.html' %}-->
+        </div>
 
 
-<!--{% endblock %}-->
+    </div>
+
+</div>
+{% include 'footer.html' %}
+
+
+{% endblock %}
