--- a/Web Development Final/online_job/templates/edit_jobdetail.html
+++ b/Web Development Final/online_job/templates/edit_jobdetail.html
@@ -1,94 +1,94 @@
-<!--{% load static %}-->
+{% load static %}
 
-<!--{% block body %}-->
+{% block body %}
 
-<!--{% include 'recruiter_navigation.html' %}-->
-
-
-<!--<marquee style="font-family:'Monotype-Corsiva'; font-size:25px; color:white; background-color:purple; font-weight:bold; margin-top:1%">-->
-<!--Edit Jobs-->
-<!--</marquee>-->
-<!--<hr>-->
-
-<!--<form class="container mt-5" method="post" enctype="multipart/form-data">-->
-<!--    {% csrf_token %}-->
-
-<!--    <div class="form-row">-->
-<!--        <div class="form-group col-md-12">-->
-<!--            <label>Job Title</label>-->
-<!--            <input type="text" class="form-control" name="jobtitle" value="{{job.title}}" required>-->
-<!--        </div>-->
-
-<!--    </div>-->
-<!--    <div class="form-row">-->
-<!--         <div class="form-group col-md-6">-->
-<!--             <label>Start Date</label> <span style="color: red" >[{{job.start_date}}]</span>-->
-<!--            <input type="date" class="form-control" name="startdate"  >-->
-<!--         </div>-->
+{% include 'recruiter_navigation.html' %}
 
 
-<!--          <div class="form-group col-md-6">-->
-<!--              <label>End Date</label> <span style="color: red">[{{job.end_date}}]</span>-->
-<!--              <input type="date" class="form-control" name="enddate" >-->
-<!--          </div>-->
-<!--      </div>-->
+<marquee style="font-family:'Monotype-Corsiva'; font-size:25px; color:white; background-color:purple; font-weight:bold; margin-top:1%">
+Edit Jobs
+</marquee>
+<hr>
 
-<!--     <div class="form-row">-->
-<!--    <div class="form-group col-md-6">-->
-<!--            <label>Salary(Per month)</label>-->
-<!--            <input type="text" class="form-control" name="salary"  value="{{job.salary}}" required>-->
-<!--         </div>-->
+<form class="container mt-5" method="post" enctype="multipart/form-data">
+    {% csrf_token %}
 
-<!--          <div class="form-group col-md-6">-->
-<!--              <img src="{{job.image.url}}" width="120" height="90"><a href="{% url 'change_companylogo' job.id %}">Change Company Logo</a>-->
+    <div class="form-row">
+        <div class="form-group col-md-12">
+            <label>Job Title</label>
+            <input type="text" class="form-control" name="jobtitle" value="{{job.title}}" required>
+        </div>
 
-
-<!--          </div>-->
-<!--      </div>-->
-
-<!--    <div class="form-row">-->
-<!--    <div class="form-group col-md-6">-->
-<!--        <label>Experience(In years)</label>-->
-<!--        <input type="text" class="form-control" name="experience" value="{{job.experience}}" required>-->
-<!--     </div>-->
-
-<!--        <div class="form-group col-md-6">-->
-<!--        <label>Company Location</label>-->
-<!--        <input type="text" class="form-control" name="location" value="{{job.location}}" required>-->
-<!--     </div>-->
+    </div>
+    <div class="form-row">
+         <div class="form-group col-md-6">
+             <label>Start Date</label> <span style="color: red" >[{{job.start_date}}]</span>
+            <input type="date" class="form-control" name="startdate"  >
+         </div>
 
 
+          <div class="form-group col-md-6">
+              <label>End Date</label> <span style="color: red">[{{job.end_date}}]</span>
+              <input type="date" class="form-control" name="enddate" >
+          </div>
+      </div>
 
-<!--    <div class="form-group col-md-12">-->
-<!--        <label>Skills</label>-->
-<!--        <input type="text" class="form-control" name="skills" value="{{job.skills}}"required>-->
-<!--     </div>-->
+     <div class="form-row">
+    <div class="form-group col-md-6">
+            <label>Salary(Per month)</label>
+            <input type="text" class="form-control" name="salary"  value="{{job.salary}}" required>
+         </div>
+
+          <div class="form-group col-md-6">
+              <img src="{{job.image.url}}" width="120" height="90"><a href="{% url 'change_companylogo' job.id %}">Change Company Logo</a>
 
 
-<!--    <div class="form-group col-md-12">-->
-<!--        <label>Description</label>-->
-<!--        <textarea type="text" class="form-control" name="description" required>{{job.description}}</textarea>-->
-<!--     </div>-->
+          </div>
+      </div>
+
+    <div class="form-row">
+    <div class="form-group col-md-6">
+        <label>Experience(In years)</label>
+        <input type="text" class="form-control" name="experience" value="{{job.experience}}" required>
+     </div>
+
+        <div class="form-group col-md-6">
+        <label>Company Location</label>
+        <input type="text" class="form-control" name="location" value="{{job.location}}" required>
+     </div>
 
 
-<!--<input type="submit" value="Submit" class="btn btn-primary" style="width: 200px" >-->
+
+    <div class="form-group col-md-12">
+        <label>Skills</label>
+        <input type="text" class="form-control" name="skills" value="{{job.skills}}"required>
+     </div>
 
 
-<!--</form>-->
-<!--{% include 'footer.html' %}-->
+    <div class="form-group col-md-12">
+        <label>Description</label>
+        <textarea type="text" class="form-control" name="description" required>{{job.description}}</textarea>
+     </div>
 
-<!--{% ifequal error "no" %}-->
-<!--<script>-->
-<!--    alert("Job Details has been updated ");-->
-<!--    window.location = ('{% url 'edit_jobdetail' job.id %}')-->
-<!--</script>-->
 
-<!--{% endifequal%}-->
-<!--{% ifequal error "yes" %}-->
+<input type="submit" value="Submit" class="btn btn-primary" style="width: 200px" >
 
-<!--<script>-->
-<!-- alert("Something Went Wrong,Try Again....");-->
-<!--</script>-->
-<!--{% endifequal%}-->
 
-<!--{% endblock %}-->
+</form>
+{% include 'footer.html' %}
+
+{% ifequal error "no" %}
+<script>
+    alert("Job Details has been updated ");
+    window.location = ('{% url 'edit_jobdetail' job.id %}')
+</script>
+
+{% endifequal%}
+{% ifequal error "yes" %}
+
+<script>
+ alert("Something Went Wrong,Try Again....");
+</script>
+{% endifequal%}
+
+{% endblock %}
