--- a/Web Development Final/online_job/templates/job_detail.html
+++ b/Web Development Final/online_job/templates/job_detail.html
@@ -1,64 +1,64 @@
-<!--{% load static %}-->
+{% load static %}
 
-<!--{% block body %}-->
+{% block body %}
 
-<!--{% include 'user_navigation.html' %}-->
-<!--<style>-->
-<!--    tr{text-align: center}-->
+{% include 'user_navigation.html' %}
+<style>
+    tr{text-align: center}
 
-<!--</style>-->
-
-
-<!--<marquee style="font-family:'Monotype-Corsiva'; font-size:25px; color:white; background-color:purple; font-weight:bold; margin-top:1%">-->
-<!-- Job Details-->
-<!--</marquee>-->
-<!--<hr>-->
-
-<!--<div class="container shadow-lg py-2 mb-2">-->
-<!-- <div class="row">-->
-<!--  <div class="col-md-4">-->
-<!--   <img src="{{job.image.url}}" style="width: 300px; height: 200px">-->
-
-<!--  </div>-->
-
-<!--  <div class="col-md-6">-->
-<!--  <h2> {{job.title}}</h2>-->
-<!--   <p>{{job.recruiter.company}} <em><a href="{% url 'user_latestjobs' %}">(View All Jobs)</a></em></p>-->
-<!--   <a href="#" class="mr-2"><i class="fa fa-map-marker mr-2"></i>{{job.location}}</a>-->
-<!--   <a href="#"><i class="fa fa-calendar mr-2"></i>{{job.creationdate}}</a>-->
-
-<!--   <br>-->
-
-<!--   <strong><i class="fa fa-money mr-2 mt-2"></i><i class="fa fa-inr mr-2 mt-2"></i>{{job.salary}} </strong>-->
-<!--<div class="mt-4">-->
-<!-- <a href="{% url 'applyforjob' job.id %}" class="btn btn-danger" style="width: 200px; height: 40px; font-size: 20px">Apply For This Job></a>-->
-
-<!--</div>-->
+</style>
 
 
-<!--  </div>-->
+<marquee style="font-family:'Monotype-Corsiva'; font-size:25px; color:white; background-color:purple; font-weight:bold; margin-top:1%">
+ Job Details
+</marquee>
+<hr>
 
-<!-- </div>-->
+<div class="container shadow-lg py-2 mb-2">
+ <div class="row">
+  <div class="col-md-4">
+   <img src="{{job.image.url}}" style="width: 300px; height: 200px">
 
-<!-- <div class="mt-3" >-->
-<!--  <h4>Overview</h4>-->
-<!--  <p>{{job.description}}</p>-->
+  </div>
 
-<!--  <h4>Required Experience</h4>-->
-<!--  <p>{{job.experience}}</p>-->
+  <div class="col-md-6">
+  <h2> {{job.title}}</h2>
+   <p>{{job.recruiter.company}} <em><a href="{% url 'user_latestjobs' %}">(View All Jobs)</a></em></p>
+   <a href="#" class="mr-2"><i class="fa fa-map-marker mr-2"></i>{{job.location}}</a>
+   <a href="#"><i class="fa fa-calendar mr-2"></i>{{job.creationdate}}</a>
 
-<!--  <h4>Skills Required</h4>-->
-<!--  <p>{{job.skills}}</p>-->
+   <br>
 
-<!--  <h4>Start Date for Applying</h4>-->
-<!--  <p>{{job.start_date}}</p>-->
+   <strong><i class="fa fa-money mr-2 mt-2"></i><i class="fa fa-inr mr-2 mt-2"></i>{{job.salary}} </strong>
+<div class="mt-4">
+ <a href="{% url 'applyforjob' job.id %}" class="btn btn-danger" style="width: 200px; height: 40px; font-size: 20px">Apply For This Job></a>
 
-<!--  <h4>Last Date for Applying</h4>-->
-<!--  <p>{{job.end_date}}</p>-->
-
-<!-- </div>-->
+</div>
 
 
-<!--</div>-->
+  </div>
 
-<!--{% endblock %}-->
+ </div>
+
+ <div class="mt-3" >
+  <h4>Overview</h4>
+  <p>{{job.description}}</p>
+
+  <h4>Required Experience</h4>
+  <p>{{job.experience}}</p>
+
+  <h4>Skills Required</h4>
+  <p>{{job.skills}}</p>
+
+  <h4>Start Date for Applying</h4>
+  <p>{{job.start_date}}</p>
+
+  <h4>Last Date for Applying</h4>
+  <p>{{job.end_date}}</p>
+
+ </div>
+
+
+</div>
+
+{% endblock %}
