--- a/Web Development Final/online_job/templates/latest_jobs.html
+++ b/Web Development Final/online_job/templates/latest_jobs.html
@@ -1,57 +1,57 @@
-<!--{% load static %}-->
+{% load static %}
 
-<!--{% block body %}-->
+{% block body %}
 
-<!--{% include 'navigation.html' %}-->
-<!--<style>-->
-<!--    tr{text-align: center}-->
+{% include 'navigation.html' %}
+<style>
+    tr{text-align: center}
 
-<!--</style>-->
-
-
-<!--<marquee style="font-family:'Monotype-Corsiva'; font-size:25px; color:white; background-color:purple; font-weight:bold; margin-top:1%">-->
-<!--Latest Jobs Available-->
-<!--</marquee>-->
-<!--<hr>-->
-
-<!--<div class="container">-->
-
-<!--<table class = "table table-hover" id="example" >-->
-<!--    <thead>-->
-<!--    <tr style="background-color: blue; color: white">-->
-<!--        <th>S.No.</th>-->
-<!--        <th>Company Name </th>-->
-<!--        <th>Job Title </th>-->
-<!--        <th>Location </th>-->
-<!--        <th>Start Date </th>-->
-<!--        <th>End Date </th>-->
-<!--        <th>Action</th>-->
-
-<!--    </tr>-->
-<!--    </thead>-->
-
-<!--    <tbody>-->
-<!--    {% for i in job %}-->
-
-<!--    <tr style="background-color : #DEB887">-->
-<!--        <td>{{forloop.counter}}</td>-->
-
-<!--        <td>{{i.recruiter.company}}</td>-->
-<!--        <td>{{i.title}} </td>-->
-<!--        <td>{{i.location}}</td>-->
-<!--        <td>{{i.start_date}}</td>-->
-<!--        <td>{{i.end_date}}</td>-->
-
-<!--        <td><a href="{% url 'user_login' %}" class="btn btn-success btn-sm" >Login To Apply</a>-->
-
-<!--        </td>-->
-
-<!--    </tr>-->
-<!--     {% endfor  %}-->
-
-<!--    </tbody>-->
-<!--</table>-->
-<!--</div>-->
+</style>
 
 
-<!--{% endblock %}-->
+<marquee style="font-family:'Monotype-Corsiva'; font-size:25px; color:white; background-color:purple; font-weight:bold; margin-top:1%">
+Latest Jobs Available
+</marquee>
+<hr>
+
+<div class="container">
+
+<table class = "table table-hover" id="example" >
+    <thead>
+    <tr style="background-color: blue; color: white">
+        <th>S.No.</th>
+        <th>Company Name </th>
+        <th>Job Title </th>
+        <th>Location </th>
+        <th>Start Date </th>
+        <th>End Date </th>
+        <th>Action</th>
+
+    </tr>
+    </thead>
+
+    <tbody>
+    {% for i in job %}
+
+    <tr style="background-color : #DEB887">
+        <td>{{forloop.counter}}</td>
+
+        <td>{{i.recruiter.company}}</td>
+        <td>{{i.title}} </td>
+        <td>{{i.location}}</td>
+        <td>{{i.start_date}}</td>
+        <td>{{i.end_date}}</td>
+
+        <td><a href="{% url 'user_login' %}" class="btn btn-success btn-sm" >Login To Apply</a>
+
+        </td>
+
+    </tr>
+     {% endfor  %}
+
+    </tbody>
+</table>
+</div>
+
+
+{% endblock %}
