--- a/Web Development Final/online_job/templates/user_home.html
+++ b/Web Development Final/online_job/templates/user_home.html
@@ -1,129 +1,129 @@
-<!--{% load static %}-->
+{% load static %}
 
-<!--{% block body %}-->
+{% block body %}
 
-<!--{% include 'user_navigation.html' %}-->
+{% include 'user_navigation.html' %}
 
-<!--&lt;!&ndash;# User Home Page&ndash;&gt;-->
-
-
-<!--<marquee style="font-family:'Monotype-Corsiva'; font-size:25px; color:white; background-color:purple; font-weight:bold; margin-top:1%">-->
-<!--User's Profile-->
-<!--</marquee>-->
-<!--<hr>-->
-<!--<div class="container">-->
-<!--    <div class="row">-->
-<!--    <div class="col-sm-8">-->
-<!--<form class=" mt-5" name="signup" method="post" enctype="multipart/form-data">-->
-<!--    {% csrf_token %}-->
-
-<!--    <div class="form-row">-->
-<!--        <div class="form-group col-md-6">-->
-<!--            <label>First Name</label>-->
-<!--            <input type="text" class="form-control" name="fname" value="{{student.user.first_name}}"required>-->
-<!--        </div>-->
+<!--# User Home Page-->
 
 
+<marquee style="font-family:'Monotype-Corsiva'; font-size:25px; color:white; background-color:purple; font-weight:bold; margin-top:1%">
+User's Profile
+</marquee>
+<hr>
+<div class="container">
+    <div class="row">
+    <div class="col-sm-8">
+<form class=" mt-5" name="signup" method="post" enctype="multipart/form-data">
+    {% csrf_token %}
 
-<!--         <div class="form-group col-md-6">-->
-<!--            <label>Last Name</label>-->
-<!--            <input type="text" class="form-control" name="lname" value="{{student.user.last_name}}" required>-->
-<!--         </div>-->
-
-<!--    </div>-->
-
-<!--     <div class="form-row">-->
-<!--          <div class="form-group col-md-12">-->
-<!--              <label>Contact</label>-->
-<!--              <input type="text" class="form-control" name="contact" value="{{student.mobile}}" required>-->
-<!--          </div>-->
-
-<!--    </div>-->
-
-<!--    <div class="form-row">-->
-
-<!--    <div class="form-group col-md-12">-->
-<!--        <label> Email ID</label>-->
-<!--        <input type="text" class="form-control" name="email" value="{{student.user.username}}"  readonly required>-->
-<!--    </div>-->
-<!--    </div>-->
+    <div class="form-row">
+        <div class="form-group col-md-6">
+            <label>First Name</label>
+            <input type="text" class="form-control" name="fname" value="{{student.user.first_name}}"required>
+        </div>
 
 
-<!--      <div class="form-row">-->
-<!--        <div class="form-group col-md-6">-->
-<!--            <label>Gender</label>-->
 
-<!--            {%if student.gender == "Male" %}-->
-<!--            <div style="border: 1px solid lightgrey; padding: 6px; border-radius:">-->
-<!--            <div class="custom-control custom-radio custom-control-inline">-->
-<!--             <input type="radio" id="customRadioInline1" name="gender" class="custom-control-input" value="Male" checked>-->
-<!--                <label class="custom-control-label" for="customRadioInline1">Male</label>-->
+         <div class="form-group col-md-6">
+            <label>Last Name</label>
+            <input type="text" class="form-control" name="lname" value="{{student.user.last_name}}" required>
+         </div>
 
-<!--            </div>-->
+    </div>
 
-<!--            <div class="custom-control custom-radio custom-control-inline">-->
-<!--             <input type="radio" id="customRadioInline2" name="gender" class="custom-control-input" value="Female">-->
-<!--                <label class="custom-control-label" for="customRadioInline2">Female</label>-->
+     <div class="form-row">
+          <div class="form-group col-md-12">
+              <label>Contact</label>
+              <input type="text" class="form-control" name="contact" value="{{student.mobile}}" required>
+          </div>
 
-<!--            </div>-->
-<!--            </div>-->
+    </div>
 
-<!--            {% else %}-->
+    <div class="form-row">
 
-<!--            <div style="border: 1px solid lightgrey; padding: 6px; border-radius:">-->
-<!--            <div class="custom-control custom-radio custom-control-inline">-->
-<!--             <input type="radio" id="customRadioInline1" name="gender" class="custom-control-input" value="Male">-->
-<!--                <label class="custom-control-label" for="customRadioInline1">Male</label>-->
-
-<!--            </div>-->
-
-<!--            <div class="custom-control custom-radio custom-control-inline">-->
-<!--             <input type="radio" id="customRadioInline2" name="gender" class="custom-control-input" value="Female" checked>-->
-<!--                <label class="custom-control-label" for="customRadioInline2">Female</label>-->
-
-<!--            </div>-->
-<!--            </div>-->
+    <div class="form-group col-md-12">
+        <label> Email ID</label>
+        <input type="text" class="form-control" name="email" value="{{student.user.username}}"  readonly required>
+    </div>
+    </div>
 
 
-<!--              {% endif %}-->
+      <div class="form-row">
+        <div class="form-group col-md-6">
+            <label>Gender</label>
+
+            {%if student.gender == "Male" %}
+            <div style="border: 1px solid lightgrey; padding: 6px; border-radius:">
+            <div class="custom-control custom-radio custom-control-inline">
+             <input type="radio" id="customRadioInline1" name="gender" class="custom-control-input" value="Male" checked>
+                <label class="custom-control-label" for="customRadioInline1">Male</label>
+
+            </div>
+
+            <div class="custom-control custom-radio custom-control-inline">
+             <input type="radio" id="customRadioInline2" name="gender" class="custom-control-input" value="Female">
+                <label class="custom-control-label" for="customRadioInline2">Female</label>
+
+            </div>
+            </div>
+
+            {% else %}
+
+            <div style="border: 1px solid lightgrey; padding: 6px; border-radius:">
+            <div class="custom-control custom-radio custom-control-inline">
+             <input type="radio" id="customRadioInline1" name="gender" class="custom-control-input" value="Male">
+                <label class="custom-control-label" for="customRadioInline1">Male</label>
+
+            </div>
+
+            <div class="custom-control custom-radio custom-control-inline">
+             <input type="radio" id="customRadioInline2" name="gender" class="custom-control-input" value="Female" checked>
+                <label class="custom-control-label" for="customRadioInline2">Female</label>
+
+            </div>
+            </div>
 
 
-<!--    </div>-->
-
-<!--    <div class="form-group col-md-6">-->
-<!--        <label>Image</label>-->
-<!--        <input type="file" class="form-control" name="image" accept="image/*" >-->
-<!--     </div>-->
-<!--</div>-->
-<!--<input type="submit" value="Submit" class="btn btn-primary my-3" style="width: 200px" >-->
+              {% endif %}
 
 
-<!--</form>-->
-<!--        &lt;!&ndash;Col 1 end &ndash;&gt;-->
-<!--    </div>-->
-<!--        <div class="col-sm-4 mt-5 text-center">-->
-<!--            <img src="{{student.image.url}}" width="300px" height="300px">-->
-<!--        </div>-->
-<!--    </div>-->
+    </div>
 
-<!--    </div>-->
-<!--{% include 'footer.html' %}-->
+    <div class="form-group col-md-6">
+        <label>Image</label>
+        <input type="file" class="form-control" name="image" accept="image/*" >
+     </div>
+</div>
+<input type="submit" value="Submit" class="btn btn-primary my-3" style="width: 200px" >
 
-<!--{% ifequal error "no" %}-->
-<!--<script>-->
-<!--    alert("Profile Updated Sucessfully");-->
-<!--    window.location = ('{% url 'user_home' %}')-->
-<!--</script>-->
 
-<!--{% endifequal%}-->
-<!--{% ifequal error "yes" %}-->
+</form>
+        <!--Col 1 end -->
+    </div>
+        <div class="col-sm-4 mt-5 text-center">
+            <img src="{{student.image.url}}" width="300px" height="300px">
+        </div>
+    </div>
 
-<!--<script>-->
-<!-- alert("Something Went Wrong,Try Again....");-->
-<!--</script>-->
-<!--{% endifequal%}-->
+    </div>
+{% include 'footer.html' %}
 
-<!--{% endblock %}-->
+{% ifequal error "no" %}
+<script>
+    alert("Profile Updated Sucessfully");
+    window.location = ('{% url 'user_home' %}')
+</script>
+
+{% endifequal%}
+{% ifequal error "yes" %}
+
+<script>
+ alert("Something Went Wrong,Try Again....");
+</script>
+{% endifequal%}
+
+{% endblock %}
 
 
 
